Fix scrollbar

--- a/assets/stylesheets/rinket.css.scss
+++ b/assets/stylesheets/rinket.css.scss
@@ -43,11 +43,17 @@ a {
 }
 
 
-.mails {
-  width: 30%;
+.mails-wrapper {
   float: left;
-  top: 0em;
+  width: 30%;
+  height: 100%;
   padding-top: 2.6em;
+}
+
+
+.mails {
+  width: 100%;
+  float: left;
   height: 100%;
   background: #FFF;
   box-shadow: 0.2em 0em 0em 0.1em #F1F1F1;
